Fix text alignment problem

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
+  right: 0px;
   font-size: 15px;
   color: #ffffff;
   padding: 0px 2px 2px 5px;
